# Corex

./: .gitignore  CMakeLists.txt
.github/workflows/: clang_robot.yml  linux.yml
benchmark/: bench_concurrent_market.cpp  bench_market.cpp  generate_orders.cpp  generate_orders.h
examples/: concurrent_market_example.cpp  market_example.cpp  simple_event_handler.h
include/concurrent/: queue.h  thread_joiner.h  thread_pool.h
include/event_handler/: event.h  event_handler.h
include/matching/market/: concurrent_market.h  market.h
include/matching/orderbook/: level.h  map_orderbook.h  order.h  orderbook.h  symbol.h
include/utils/: log.h
src/event_handler/: event.cpp
src/matching/market/: concurrent_market.cpp  market.cpp
src/matching/orderbook/: level.cpp  map_orderbook.cpp  order.cpp  symbol.cpp
test/: test_level.cpp  test_order.cpp
test/market/: debug_event_handler.h  market_test_fixture.h
